# framed-serial

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  serialwrap.rs
tests/: test.rs
